@@ -190,4 +190,34 @@ describe( 'AccountDetailsSection', () => {
 		);
 		expect( connectionSuccessfulMessage ).toBeInTheDocument();
 	} );
+
+	it( 'Stripe account ID and email should be displayed with a live account', () => {
+		useAccount.mockReturnValue( {
+			data: {
+				webhook_url: 'example.com',
+				account: {
+					id: 'acct_123',
+					email: 'test@example.com',
+					testmode: false,
+				},
+			},
+		} );
+		useTestMode.mockReturnValue( [ false, jest.fn() ] );
+
+		useAccountKeysPublishableKey.mockReturnValue( [
+			'live_pk',
+			jest.fn(),
+		] );
+		useAccountKeysSecretKey.mockReturnValue( [ 'live_sk', jest.fn() ] );
+		useAccountKeysWebhookSecret.mockReturnValue( [
+			'live_whs',
+			jest.fn(),
+		] );
+
+		render( <AccountDetailsSection setModalType={ setModalTypeMock } /> );
+		const stripeAccountDetails = screen.getByText(
+			/test@example.com \(acct_123\)/i
+		);
+		expect( stripeAccountDetails ).toBeInTheDocument();
+	} );
 } );
